--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -16,6 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
   </head>
   <body>
     {% include header.html %} {{ content }} {% include footer.html %}
