Adjusted font sizes on smaller screens

--- a/_sass/1-modules/footer.sass
+++ b/_sass/1-modules/footer.sass
@@ -29,11 +29,17 @@
           color: $red
 
   @media screen and (max-width: 768px)
+    .nav-container ul
+      padding: 0
+      margin-bottom: 1rem
+      li a
+        text-align: center
+
     .col-sm-12
       justify-content: center
 
       .footer-neu-logo
-        margin-bottom: 2rem
+        margin-bottom: 1rem
 
   a
     text-decoration: none
