--- a/_sass/1-modules/header.sass
+++ b/_sass/1-modules/header.sass
@@ -43,6 +43,8 @@
     color: $off-white
     font-weight: bold
     font-size: 3rem
+    @media screen and (max-width: 768px)
+      font-size: 2.5rem
 
   .nav-link
     color: $off-white
