--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@ layout: "wrapper"
   </div>
 </section>
 <section class="research-areas">
-  <div class="container py-md-5">
+  <div class="container py-md-5 pt-5">
     <div class="row">
       <div class="ra-col col-sm-12 col-md-4">
         <div class="ra-card d-flex flex-column align-items-center">
