--- a/_sass/2-layouts/index.sass
+++ b/_sass/2-layouts/index.sass
@@ -22,6 +22,9 @@ section
       text-align: center
       color: $brown
 
+      @media screen and (max-width: 768px)
+        font-size: 1.75rem
+
       &:nth-child(even)
         color: $red
   .about-body
@@ -45,9 +48,6 @@ section
 
     @media screen and (max-width: 768px)
       max-height: 510px
-
-      // &::first-child
-      //   .ra-card
 
       &:last-child
         .ra-card
