Finished people page

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -71,7 +71,7 @@ layout: "wrapper"
               <img src="assets/images/icons/linkedin.svg" alt="LinkedIn logo" />
             </a>
             {% endif %} 
-            {% if person.wesbite %}
+            {% if person.website %}
             <a href="{{ person.website }}" class="external-site-icon">
               <img
                 src="assets/images/icons/external.svg"
