--- a/_sass/2-layouts/people.sass
+++ b/_sass/2-layouts/people.sass
@@ -1,34 +1,55 @@
-.current-members
+.people
   h1
     text-align: center
-  .poloroid
-    background: $white
-    padding: 1rem
+    font-size: 2rem
 
-    .row
-      width: 100%
-      padding: 0
+  section
+    &:nth-child(even)
+      background-color: $off-white
 
-      .headshot
-        max-width: 400px
-        padding: 0 0 1rem 0
+    &:nth-child(odd)
+      background-color: $white
 
-      .poloroid-text
-        padding-left: 0
-        h2
-          font-size: 1rem
-          color: $brown
-          margin-bottom: 0
-      .poloroid-icons
-        padding-right: 0
-        a img
-          height: 24px
-        .external-site-icon
-          margin-left: 0.75em
-  .other-members .poloroid
-    margin: 0.5rem
+  .current-members
 
-.alumni
-  ul
-    list-style-type: none
-    margin-right: 1.5rem
+    .poloroid
+      background: $white
+      padding: 1rem
+
+      .row
+        width: 100%
+        padding: 0
+
+        .headshot
+          max-width: 350px
+          padding: 0 0 1rem 0
+
+        .poloroid-text
+          padding-left: 0
+          h2
+            font-size: 1rem
+            color: $brown
+            margin-bottom: 0
+        .poloroid-icons
+          padding-right: 0
+          a img
+            height: 24px
+          .external-site-icon
+            margin-left: 0.75em
+    .other-members .poloroid
+      margin: 0.5rem
+
+  .alumni
+    .container
+      width: 50%
+      margin-top: 1rem
+      text-align: center
+
+      h2
+        margin-bottom: 1.5rem
+        font-size: 1rem
+        color: $brown
+        margin-bottom: 1rem
+
+        &:nth-child(even)
+          color: $red
