Fixed misspelling of 'polaroid', tagged text section files, updated README.md

--- a/_sass/2-layouts/people.sass
+++ b/_sass/2-layouts/people.sass
@@ -12,7 +12,7 @@
 
   .current-members
 
-    .poloroid
+    .polaroid
       background: $white
       padding: 1rem
 
@@ -24,19 +24,19 @@
           max-width: 350px
           padding: 0 0 1rem 0
 
-        .poloroid-text
+        .polaroid-text
           padding-left: 0
           h2
             font-size: 1rem
             color: $brown
             margin-bottom: 0
-        .poloroid-icons
+        .polaroid-icons
           padding-right: 0
           a img
             height: 24px
           .external-site-icon
             margin-left: 0.75em
-    .other-members .poloroid
+    .other-members .polaroid
       margin: 0.5rem
 
   .alumni
